changed the measurement tools to make them easier for testing. now the user specifies the percentage of the video size they want for the tool size. the size of the player will fill as much or the screen as possible, this might fix the issue with the player controls not showing up on smaller screens. cleaned up the player html file.

--- a/genXXXX/css/DMVPlayer.css
+++ b/genXXXX/css/DMVPlayer.css
@@ -1,12 +1,36 @@
 /*DMVPlayer Copyright 2014 by ISD197*/
 
+#wrapper
+{
+  position: relative;
+  /*width: 100%;*/
+  height: 100%;
+}
+
+#wrapper:before
+{
+  content: "";
+  display: block;
+  /*padding-top: 75% !important;*/
+  padding-left: 0%;
+}
+
+#main
+{
+  position: absolute;
+  top: 0;
+  left: 0;
+  bottom: 0;
+  right: 0;
+}
+
 table,th,td
 {
-font-family: "calibri";
-border-collapse:collapse;
-vertical-align:center;
-position: relative;
-  max-width: 980px;
+  font-family: "calibri";
+  border-collapse:collapse;
+  vertical-align:center;
+  position: relative;
+  /*max-width: 980px;*/
   width: "100%";
   border: "0";
   margin-top: 5px;
